--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,27 +1,25 @@
 # Task1 Extra
 
 name: Task1_Extra
-env: 
-   Deploy_Ver             : ${{github.sha}}
-   YEAR                   : 2022
-   MONTH                  : February
-   DAY_OF_THE_MONTH       : 17
-   FAVORITE_DAY           : ${{secrets.FAVORITE_DAY_OF_WEEK}}
-
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-
-
-# Allows you to run this workflow manually from the Actions tab
+   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  
+# This variables can be called from any step of any job
+env: 
+   Deploy_Ver             : ${{github.sha}}
+   YEAR                   : 2222
+   
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  task1:
+  Job1_extra1:
     # The type of runner that the job will run on
     runs-on  : ubuntu-latest
     
@@ -31,26 +29,33 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository, so your job can access it
-      - name : Step 1 Fit clone my repo
-        uses : actions/checkout@v1
+      - uses : actions/checkout@v1
       # Print the list of files/directories in your github repository.
-      - name : Step 2 ls 
+      - name : Step 1 ls 
         run  : ls
       # Print content of your log.txt file
-      - name : Step 3 cat         
+      - name : Step 2 cat         
         run  : cat log.txt
-      - name : Step 4 Deploy-Version          
-        run  : echo "Deploy-Version = ${{env.Deploy_Ver}}"
+      - name : Step 3 Print hello          
+        run  : echo "Hello from ${{ env.DEPLOY_VER }} commit"
         
           
-  task2:
+  Job2_extra1:
   
     runs-on: ubuntu-latest
     # Run  after the First job is finished.
-    needs: [task1]
-    
-    
+    needs: [Job1_extra1]
+    env:      
+      MONTH                  : "February"
+      DAY_OF_THE_MONTH       : 29
+   
     steps: 
+      - name: Print My favorite day of week
+      
+        env:
+         FAVORITE_DAY_OF_WEEK : "Friday"
+        run: echo "My favorite day of week is $FAVORITE_DAY_OF_WEEK"
+           
       - name  : Step 1 Print the system date and time
         run   : date
       - name  : Step 2 Print DAY_OF_THE_MONTH
