--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,12 +46,11 @@ jobs:
     # Run  after the First job is finished.
     needs: [Job1_extra1]
     env:      
-      MONTH                  : "February"
-      DAY_OF_THE_MONTH       : 29
+      MONTH                  : "March"
+      DAY_OF_THE_MONTH       : 1
    
     steps: 
       - name: Print My favorite day of week
-      
         env:
          FAVORITE_DAY_OF_WEEK : "Friday"
         run: echo "My favorite day of week is $FAVORITE_DAY_OF_WEEK"
@@ -59,10 +58,10 @@ jobs:
       - name  : Step 1 Print the system date and time
         run   : date
       - name  : Step 2 Print DAY_OF_THE_MONTH
-        run   : echo "DAY_OF_THE_MONTH = ${{env.DAY_OF_THE_MONTH}}"
-      - name  : Step 3 Print MONTH
-        run   : echo "MONTH = ${{env.MONTH}}"
-      - name  : Step 4 Print YEAR
-        run   : echo "YEAR = ${{env.YEAR}}"        
-      - name  : Step 5 Print FAVORITE_DAY
+        run   :
+                echo "DAY = ${{env.DAY_OF_THE_MONTH}}"
+                echo "MONTH = ${{env.MONTH}}"
+                echo "YEAR = ${{env.YEAR}}"
+                echo it's a very secret day
+      - name  : Step 3 Print FAVORITE_DAY
         run   : echo "FAVORITE_DAY = ${{secrets.FAVORITE_DAY_OF_WEEK}}"
