--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -62,6 +62,6 @@ jobs:
                 echo "DAY = ${{env.DAY_OF_THE_MONTH}}"
                 echo "MONTH = ${{env.MONTH}}"
                 echo "YEAR = ${{env.YEAR}}"
-                echo it's a very secret day
+                echo "it's a very secret day"
       - name  : Step 3 Print FAVORITE_DAY
         run   : echo "FAVORITE_DAY = ${{secrets.FAVORITE_DAY_OF_WEEK}}"
