--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ on:
   
 # This variables can be called from any step of any job
 env: 
-   Deploy_Ver             : ${{github.sha}}
+   Deploy_Ver             : ${{ github.sha }}
    YEAR                   : 2222
    
 
@@ -37,7 +37,7 @@ jobs:
       - name : Step 2 cat         
         run  : cat log.txt
       - name : Step 3 Print hello          
-        run  : echo "Hello from ${{ env.DEPLOY_VER }} commit"
+        run  : echo "Hello from ${{env.DEPLOY_VER}} commit"
         
           
   Job2_extra1:
@@ -58,7 +58,7 @@ jobs:
       - name  : Step 1 Print the system date and time
         run   : date
       - name  : Step 2 Print DAY_OF_THE_MONTH
-        run   :
+        run   : |
                 echo Day - ${{ env.DAY_OF_THE_MONTH }}
                 Month - ${{ env.MONTH }}
                 Year - ${{ env.YEAR }}
