--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,7 +37,7 @@ jobs:
       - name : Step 2 cat         
         run  : cat log.txt
       - name : Step 3 Print hello          
-        run  : echo "Hello from ${{env.DEPLOY_VER}} commit"
+        run  : echo "Hello from $env.DEPLOY_VER commit"
         
           
   Job2_extra1:
