--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,9 +59,9 @@ jobs:
         run   : date
       - name  : Step 2 Print DAY_OF_THE_MONTH
         run   : |
-                echo Day - ${{ env.DAY_OF_THE_MONTH }}
+                echo "Day - ${{ env.DAY_OF_THE_MONTH }}
                 Month - ${{ env.MONTH }}
                 Year - ${{ env.YEAR }}
-                "it's a very secret day"
+                it's a very secret day"
       - name  : Step 3 Print FAVORITE_DAY
         run   : echo "FAVORITE_DAY = ${{secrets.FAVORITE_DAY_OF_WEEK}}"
