--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,9 +14,6 @@ on:
 env: 
    DEPLOY_VER: ${{ github.sha }}
    
-   
-
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   Job1_extra1:
@@ -30,11 +27,9 @@ jobs:
     steps:
       # Checks-out your repository, so your job can access it
       - uses : actions/checkout@v1
-      # Print the list of files/directories in your github repository.
-      - name : Step 1 ls 
+      - name : Step 1 Print the list of files/directories in github repository 
         run  : ls
-      # Print content of your log.txt file
-      - name : Step 2 cat         
+      - name : Step 2 Print content of your log.txt file.        
         run  : cat log.txt
       - name : Step 3 Print hello          
         run  : echo "Hello from ${{ env.DEPLOY_VER }} commit"
@@ -58,11 +53,11 @@ jobs:
            
       - name  : Step 1 Print the system date and time
         run   : date
-      - name  : Step 2 Print DAY_OF_THE_MONTH
+      - name  : Step 2 Print variable’s content 
         run   : |
                 echo "Day - ${{ env.DAY_OF_THE_MONTH }}
                 Month - ${{ env.MONTH }}
                 Year - ${{ env.YEAR }}
                 it's a very secret day"
-      - name  : Step 3 Print FAVORITE_DAY
-        run   : echo "FAVORITE_DAY = ${{secrets.FAVORITE_DAY_OF_WEEK}}"
+      - name  : Step 3 Print favorite day
+        run   : echo "My favorite day of week is  = ${{secrets.FAVORITE_DAY_OF_WEEK}}"
