--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ on:
   
 # This variables can be called from any step of any job
 env: 
-   DEPLOY_VER: ${{ github.sha }}
+   DEPLOY_VER: $github.sha
    
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -32,7 +32,7 @@ jobs:
       - name : Step 2 Print content of your log.txt file.        
         run  : cat log.txt
       - name : Step 3 Print hello          
-        run  : echo "Hello from ${{ env.DEPLOY_VER }} commit"
+        run  : echo "Hello from $env.DEPLOY_VER commit"
         
           
   Job2_extra1:
@@ -55,9 +55,9 @@ jobs:
         run   : date
       - name  : Step 2 Print variable’s content 
         run   : |
-                echo "Day - ${{ env.DAY_OF_THE_MONTH }}
-                Month - ${{ env.MONTH }}
-                Year - ${{ env.YEAR }}
+                echo "Day - $env.DAY_OF_THE_MONTH
+                Month - $env.MONTH
+                Year - $env.YEAR
                 it's a very secret day"
       - name  : Step 3 Print favorite day
-        run   : echo "My favorite day of week is  = ${{secrets.FAVORITE_DAY_OF_WEEK}}"
+        run   : echo "My favorite day of week is  = $secrets.FAVORITE_DAY_OF_WEEK"
