--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,8 +43,8 @@ jobs:
     env:      
       MONTH                  : "March"
       DAY_OF_THE_MONTH       : 1
-      YEAR                   : 2222
-      FAVORITE_DAY_OF_WEEK   : ${{ secrets.Friday }}
+      YEAR                   : 2022
+      FAVORITE_DAY_OF_WEEK   : "Friday"
       
     steps: 
       - name: Print My favorite day of week         
