--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -57,4 +57,4 @@ jobs:
                 Year - ${{ env.YEAR }}
                 it's a very secret day"
       - name  : Step 3 Print favorite day
-        run   : echo "My favorite day of week is  = ${{ env.FAVORITE_DAY_OF_WEEK }}"
+        run   : echo "My favorite day of week is  = ${{ secrets.FAVORITE_DAY_OF_WEEK }}"
